--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
 MONGO_URI=mongodb+srv://aliqazi7896:5G7DMZZomCAlnEyA@cluster0.wnsgkqe.mongodb.net/dialer
 SESSION_SECRET=your_secret_key_here
-FRONTEND_ORIGIN=https://enchanting-lolly-86d5a6.netlify.app
+FRONTEND_ORIGIN=https://bitnextdailer.netlify.app
