--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 MONGO_URI=mongodb+srv://aliqazi7896:5G7DMZZomCAlnEyA@cluster0.wnsgkqe.mongodb.net/dialer
 SESSION_SECRET=your_secret_key_here
-FRONTEND_ORIGIN=http://127.0.0.1:5501
-# FRONTEND_ORIGIN=https://bitnextdailer.netlify.app
+# FRONTEND_ORIGIN=http://127.0.0.1:5501
+FRONTEND_ORIGIN=https://bitnextdailer.netlify.app
