--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ MONGO_URI=mongodb+srv://aliqazi7896:5G7DMZZomCAlnEyA@cluster0.wnsgkqe.mongodb.ne
 SESSION_SECRET=your_secret_key_here
 # FRONTEND_ORIGIN=http://127.0.0.1:5501
 # FRONTEND_ORIGIN=https://bitnextdailer.netlify.app
-FRONTEND_ORIGIN=https://dialer.bitnexdial.com
+FRONTEND_ORIGIN=https://bitnexdial.com/
