--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ SESSION_SECRET=your_secret_key_here
 # FRONTEND_ORIGIN=http://127.0.0.1:5501
 # FRONTEND_ORIGIN=https://bitnextdailer.netlify.app
 # FRONTEND_ORIGIN=https://bitnexdial.com
-FRONTEND_ORIGIN=https://manual.bitnexdial.com/ucp
+FRONTEND_ORIGIN=https://bitnexdial.com
 
